service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/deployment.sidecar-injector.jaegertracing.io-rkxvv.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-03T20:01:39Z"
  generateName: deployment.sidecar-injector.jaegertracing.io-
  generation: 1
  labels:
    olm.owner: jaeger-operator.v1.39.0-3
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-operators
    olm.webhook-description-generate-name: deployment.sidecar-injector.jaegertracing.io
    olm.webhook-description-hash: 75dcd959d7
  name: deployment.sidecar-injector.jaegertracing.io-rkxvv
  resourceVersion: "32634"
  uid: 36cd41b2-da77-4264-bda4-975a09110fee
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2VENDQVdLZ0F3SUJBZ0lJUWZzVGc1VC9neW93Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE5ERm1ZakV6T0RNNQpOR1ptT0RNeVlUQWVGdzB5TXpBek1ETXlNREF4TXpkYUZ3MHlOVEF6TURJeU1EQXhNemRhTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRReFptSXgKTXpnek9UUm1aamd6TW1Fd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFSNHpEa3UzaGFzQjdiTgpCNnFZZ01SRTBCYW [...]
    service:
      name: jaeger-operator-service
      namespace: openshift-operators
      path: /mutate-v1-deployment
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: deployment.sidecar-injector.jaegertracing.io
  namespaceSelector: {}
  objectSelector:
    matchExpressions:
    - key: name
      operator: NotIn
      values:
      - jaeger-operator
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
