service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/mjaeger.kb.io-j74rm.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-03T20:01:39Z"
  generateName: mjaeger.kb.io-
  generation: 1
  labels:
    olm.owner: jaeger-operator.v1.39.0-3
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-operators
    olm.webhook-description-generate-name: mjaeger.kb.io
    olm.webhook-description-hash: 5c6c65dbdf
  name: mjaeger.kb.io-j74rm
  resourceVersion: "32646"
  uid: 148a13d0-b172-48ca-8e45-fd2ee15aa354
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2VENDQVdLZ0F3SUJBZ0lJUWZzVGc1VC9neW93Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE5ERm1ZakV6T0RNNQpOR1ptT0RNeVlUQWVGdzB5TXpBek1ETXlNREF4TXpkYUZ3MHlOVEF6TURJeU1EQXhNemRhTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRReFptSXgKTXpnek9UUm1aamd6TW1Fd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFSNHpEa3UzaGFzQjdiTgpCNnFZZ01SRTBCYW [...]
    service:
      name: jaeger-operator-service
      namespace: openshift-operators
      path: /mutate-jaegertracing-io-v1-jaeger
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mjaeger.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - jaegertracing.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jaegers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
