service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/mutating.knativeeventings.operator.serverless.openshift.io5rw52.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-03T20:07:49Z"
  generateName: mutating.knativeeventings.operator.serverless.openshift.io-
  generation: 1
  labels:
    olm.owner: serverless-operator.v1.26.0
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-serverless
    olm.webhook-description-generate-name: mutating.knativeeventings.operator.serverless.openshift.io
    olm.webhook-description-hash: cc5fbbf
  name: mutating.knativeeventings.operator.serverless.openshift.io5rw52
  resourceVersion: "37573"
  uid: f61d40f2-c0bd-46e5-a545-53c072c549fa
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ1ekNDQVdLZ0F3SUJBZ0lJZUE4U0pXOGF2aTh3Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE56Z3daakV5TWpVMgpaakZoWW1VeVpqQWVGdzB5TXpBek1ETXlNREEzTkRoYUZ3MHlOVEF6TURJeU1EQTNORGhhTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRjNE1HWXgKTWpJMU5tWXhZV0psTW1Zd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFTVnRBVXJyU0NJZFNldApjczZieEk3amxuRX [...]
    service:
      name: knative-openshift-service
      namespace: openshift-serverless
      path: /mutate-knativeeventings
      port: 9876
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mutating.knativeeventings.operator.serverless.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - operator.knative.dev
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - knativeeventings
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
