service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/openshift-operators.servicemesh-resources.maistra.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-03T20:02:07Z"
  generation: 4
  name: openshift-operators.servicemesh-resources.maistra.io
  resourceVersion: "34187"
  uid: d5d355f7-849d-4e7e-b719-99af1a536d2b
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: maistra-admission-controller
      namespace: openshift-operators
      path: /mutate-smcp
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: smcp.mutation.maistra.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - maistra.io
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicemeshcontrolplanes
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: maistra-admission-controller
      namespace: openshift-operators
      path: /mutate-smmr
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: smmr.mutation.maistra.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - maistra.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicemeshmemberrolls
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
