service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/webhook.domainmapping.serving.knative.dev.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"labels":{"app.kubernetes.io/component":"domain-mapping","app.kubernetes.io/name":"knative-serving","app.kubernetes.io/version":"1.5.0"},"name":"webhook.domainmapping.serving.knative.dev"},"webhooks":[{"admissionReviewVersions":["v1","v1beta1"],"clientConfig":{"service":{"name":"domainmapping-webhook","namespace":"knative-serving"}},"failurePolicy":"Fail","name":"webhook.domainmapping.serving. [...]
  creationTimestamp: "2023-03-03T20:09:43Z"
  generation: 12
  labels:
    app.kubernetes.io/component: domain-mapping
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: 1.5.0
  name: webhook.domainmapping.serving.knative.dev
  ownerReferences:
  - apiVersion: v1
    blockOwnerDeletion: true
    controller: true
    kind: Namespace
    name: knative-serving
    uid: fcb3c7a3-ed6a-4771-9ad2-46d8c1d9b3f3
  resourceVersion: "40874"
  uid: 7db20c97-d62e-49c4-acb6-574b3aedd3f0
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNxRENDQWsyZ0F3SUJBZ0lRYS94c0phbXo0RDZnOWFhUkczSnVrekFLQmdncWhrak9QUVFEQWpCS01SUXcKRWdZRFZRUUtFd3RyYm1GMGFYWmxMbVJsZGpFeU1EQUdBMVVFQXhNcFpHOXRZV2x1YldGd2NHbHVaeTEzWldKbwpiMjlyTG10dVlYUnBkbVV0YzJWeWRtbHVaeTV6ZG1Nd0hoY05Nak13TXpBek1qQXdPVFUwV2hjTk1qTXdNekV3Ck1qQXdPVFUwV2pCS01SUXdFZ1lEVlFRS0V3dHJibUYwYVhabExtUmxkakV5TURBR0ExVUVBeE1wWkc5dFlXbHUKYldGd2NHbHVaeTEzWldKb2IyOXJMbXR1WVhScGRtVXRjMlZ5ZG1sdVp5NXpkbU13V1RBVEJnY3Foa2pPUFFJQgpCZ2dxaGtqT1BRTU [...]
    service:
      name: domainmapping-webhook
      namespace: knative-serving
      path: /defaulting
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: webhook.domainmapping.serving.knative.dev
  namespaceSelector:
    matchExpressions:
    - key: webhooks.knative.dev/exclude
      operator: DoesNotExist
  objectSelector: {}
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - serving.knative.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - domainmappings
    - domainmappings/status
    scope: '*'
  - apiGroups:
    - serving.knative.dev
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - domainmappings
    - domainmappings/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
