service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/webhook.istio.networking.internal.knative.dev.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"labels":{"app.kubernetes.io/component":"net-istio","app.kubernetes.io/name":"knative-serving","app.kubernetes.io/version":"devel","networking.knative.dev/ingress-provider":"istio"},"name":"webhook.istio.networking.internal.knative.dev"},"webhooks":[{"admissionReviewVersions":["v1","v1beta1"],"clientConfig":{"service":{"name":"net-istio-webhook","namespace":"knative-serving"}},"failurePolicy": [...]
  creationTimestamp: "2023-03-03T20:09:44Z"
  generation: 2
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: devel
    networking.knative.dev/ingress-provider: istio
  name: webhook.istio.networking.internal.knative.dev
  ownerReferences:
  - apiVersion: v1
    blockOwnerDeletion: true
    controller: true
    kind: Namespace
    name: knative-serving
    uid: fcb3c7a3-ed6a-4771-9ad2-46d8c1d9b3f3
  resourceVersion: "40189"
  uid: 41243caf-fd01-467e-aea6-78751ab3100b
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNqakNDQWpTZ0F3SUJBZ0lRVFlSRFBpSHNLdzdlWUNTRVZqWkZEREFLQmdncWhrak9QUVFEQWpCR01SUXcKRWdZRFZRUUtFd3RyYm1GMGFYWmxMbVJsZGpFdU1Dd0dBMVVFQXhNbGJtVjBMV2x6ZEdsdkxYZGxZbWh2YjJzdQphMjVoZEdsMlpTMXpaWEoyYVc1bkxuTjJZekFlRncweU16QXpNRE15TURBNU5UZGFGdzB5TXpBek1UQXlNREE1Ck5UZGFNRVl4RkRBU0JnTlZCQW9UQzJ0dVlYUnBkbVV1WkdWMk1TNHdMQVlEVlFRREV5VnVaWFF0YVhOMGFXOHQKZDJWaWFHOXZheTVyYm1GMGFYWmxMWE5sY25acGJtY3VjM1pqTUZrd0V3WUhLb1pJemowQ0FRWUlLb1pJemowRApBUWNEUWdBRTdwWj [...]
    service:
      name: net-istio-webhook
      namespace: knative-serving
      path: /defaulting
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: webhook.istio.networking.internal.knative.dev
  namespaceSelector:
    matchExpressions:
    - key: webhooks.knative.dev/exclude
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: serving.knative.dev/configuration
      operator: Exists
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    - deployments/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
